--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1320,7 +1320,7 @@
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
-    "    return function_values_trace(, x_values)"
+    "    return function_values_trace(list_of_terms, x_values)"
    ]
   },
   {
