Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1315,17 +1315,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
-    "    return function_values_trace(find_derivative(terms), x_values)"
+    "    return function_values_trace(, x_values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1334,24 +1334,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'x': [-5, -4, -3, -2, -1, 0, 1, 2, 3, 4],\n",
-       " 'y': [-30, -24, -18, -12, -6, 0, 6, 12, 18, 24],\n",
-       " 'mode': 'lines',\n",
-       " 'name': 'data',\n",
-       " 'text': []}"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "three_x_squared_minus_eleven_derivative_trace"
    ]
